# bouncy-particle-sampler

./: CMakeLists.txt  README.md
cmake/Modules/: FindCVODES.cmake
examples/: CMakeLists.txt  benchmarking_example.cc
examples/benchmarking_example/: CMakeLists.txt  benchmarking_example.cc
examples/bps_refresh_rate/: CMakeLists.txt  bps_refresh_rate.cc
examples/compare_bps_zig_zag/: CMakeLists.txt  compare_bps_zig_zag.cc
examples/distributions/: gaussian.h  gaussian.tcc
examples/gaussian_chain/: CMakeLists.txt  gaussian_chain.cc  variance_processor.h
examples/path_plotting/: CMakeLists.txt  bps_path.cc  run_and_plot.h  zig_zag_path.cc
src/analysis/: bps_benchmark.h  bps_benchmark.tcc  output_analysis.h  output_analysis.tcc  parallel_mcmc_runner.h  parallel_mcmc_runner.tcc  parallel_workers.h  parallel_workers.tcc  pdmp_runner.h  pdmp_runner.tcc  plotting_utils.h  plotting_utils.tcc  utils.h  utils.tcc
src/analysis/output_processors/: autocorrelation_calculator.h  autocorrelation_calculator.tcc  batch_means.h  batch_means.tcc  path_collector.h  path_collector.tcc  quadrature_mean_estimator.h  quadrature_mean_estimator.tcc  sequential_processor_base.h  sequential_processor_base.tcc
src/analysis/plotting/: box_plot.cc  box_plot.h  piecewise_linear_path.cc  piecewise_linear_path.h  qapplication.h  utils.cc  utils.h
src/analysis/running_policies/: fixed_iterations_count_runner.h  fixed_iterations_count_runner.tcc  timed_runned.h  timed_runned.tcc
src/analysis/timers/: clock_gettime_wrapper_base.h  clock_gettime_wrapper_base.tcc  cpu_timer.h  cpu_timer.tcc  per_thread_cpu_timer.h  per_thread_cpu_timer.tcc  wall_clock_timer.h  wall_clock_timer.tcc
src/bouncy_particle_sampler/: basic_bps.h  basic_bps.tcc  bounce_operator.h  bps_flow.h  bps_state.h  bps_state.tcc  bps_utils.h  bps_utils.tcc  gaussian_pp_strategy.h  gaussian_pp_strategy.tcc  linear_flow.h  linear_flow.tcc  newtonian_bounce_operator.h  newtonian_bounce_operator.tcc  numerical_pp_strategy.h  numerical_pp_strategy.tcc  pp_strategy.h  pp_strategy.tcc
src/bouncy_particle_sampler/estimators/: expectation_estimators.h  expectation_estimators.tcc  integrated_autocorrelation_time.h  integrated_autocorrelation_time.tcc
src/core/: mcmc.h  mcmc.tcc  pdmp.h  pdmp.tcc  random_number_sampler.tcc
src/core/dependencies_graph/: dependencies_graph.h  dependencies_graph.tcc  factor_node.h  factor_node.tcc  markov_kernel_node.h  markov_kernel_node.tcc  nodes.h  nodes.tcc  variable_node.h  variable_node.tcc
src/core/flow/: linear_flow.h  linear_flow.tcc
src/core/policies/: linear_flow.h  linear_flow.tcc  linear_flow_base.h  linear_flow_base.tcc  markov_kernel.h  markov_kernel.tcc  poisson_process.h  poisson_process.tcc
src/core/state_space/: position_and_velocity_state.h  position_and_velocity_state.tcc
src/gsl_wrappers/: integration_wrappers.h  integration_wrappers.tcc  root_finding_wrappers.h  root_finding_wrappers.tcc  statistics_wrappers.h  statistics_wrappers.tcc  wrappers_utils.h  wrappers_utils.tcc
src/mcmc/: pdmp_builder_base.h  pdmp_builder_base.tcc  utils.h  utils.tcc
src/mcmc/bps/: bps_builder.h  bps_builder.tcc  reflection_kernel.h  reflection_kernel.tcc
src/mcmc/distributions/: distribution_base.h  distribution_base.tcc  gaussian.h  gaussian.tcc
src/mcmc/zig_zag/: zig_zag_builder.h  zig_zag_builder.tcc
src/poisson_process/: homogeneous_poisson_process.h  homogeneous_poisson_process.tcc  nhpp_by_approximating_quantile.h  nhpp_by_approximating_quantile.tcc  nhpp_by_thinning.h  nhpp_by_thinning.tcc  nhpp_by_time_scaling.h  nhpp_by_time_scaling.tcc  non_homogeneous_poisson_process.h  non_homogeneous_poisson_process.tcc  poisson_process.h  poisson_process.tcc  random_number_sampler.h
tests/: CMakeLists.txt
tests/analysis/: CMakeLists.txt  mock_observer.h  mock_pdmp.h  mock_timer.h  pdmp_runner_tests.cc  timed_runner_tests.cc
tests/analysis/output_processors/: CMakeLists.txt  autocorrelation_calculator_tests.cc  batch_means_tests.cc  mean_estimators_tests.cc  output_processors_tests_utils.h  path_collector_tests.cc
tests/core/: CMakeLists.txt  dependencies_graph_tests.cc  dummy_nodes.h  flow_tests.cc  mock_policies.h  nodes_tests.cc  pdmp_integration_tests.cc  pdmp_tests.cc  poisson_process_policy_tests.cc  state_tests.cc
tests/mcmc/: CMakeLists.txt  pdmp_builder_tests.cc  utils_tests.cc
tests/mcmc/bps/: CMakeLists.txt  reflection_kernel_tests.cc
tests/mcmc/distributions/: CMakeLists.txt  gaussian_tests.cc
